# SynDX

./: .coveragerc  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  COMPLETION_REPORT.md  CONTRIBUTING.md  DATASET_SUMMARY.md  DEPLOYMENT_GUIDE.md  Dockerfile  FIGURE_MANIFEST.csv  FINAL_STATUS_REPORT.md  GITHUB_READY_VERIFICATION.md  GITHUB_UPLOAD_INSTRUCTIONS.md  LICENSE  PROJECT_SUMMARY.md  README.md  REPRODUCIBILITY.md  automated_test.py  coverage.xml  demo.py  demo_advanced_visualization.py  docker-compose.yml  generate_complete_codebase.py  prepare_github_release.bat  prepare_github_release.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  start_demo.bat  verify_implementation.py
.md/: EXPERT_EVALUATION_TEMPLATE.md  PUBLICATION_CHECKLIST.md  QUICKSTART.md  README.md  VALIDATION_PROTOCOL.md
data/: archetype_sample.csv
docs/: .coveragerc  README.md
examples/: academic_visualizations.py  advanced_academic_charts.py  comparative_academic_charts.py  complete_visualization_suite.py  supplementary_figures.py  vestibular_demo.py  vestibular_demo_with_viz.py  visualization.py
notebooks/: 01_Quick_Start_Tutorial.ipynb  02_Phase1_Knowledge_Extraction.ipynb  03_Phase2_VAE_and_XAI_Synthesis.ipynb  04_Phase3_Validation_and_Metrics.ipynb  05_Complete_Pipeline_End_to_End.ipynb  README.md
results/: metrics.csv  metrics.json
scripts/: compute_performance_metrics.py  demo.py  demo_advanced_visualization.py  generate_2d_3d_visualizations.py  generate_all_figures.py  generate_example_dataset.py  generate_full_dataset_for_paper.py  generate_manuscript_figures.py  (+5 more)
(+115 files in other folders)
