[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syndx"
version = "1.0.0"
description = "SynDX: Synthetic Data Generation for Clinical Decision Support"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "diffprivlib>=0.6.0",
    "fhir.resources>=7.0.2",
    "matplotlib>=3.7.2",
    "numpy>=1.24.3",
    "pandas>=2.0.3",
    "pyyaml>=6.0.1",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.1",
    "seaborn>=0.12.2",
    "shap>=0.42.1",
    "torch>=2.0.1",
    "tqdm>=4.66.1",
    "xgboost>=1.7.6",
]

[project.optional-dependencies]
dev = [
    "black>=23.9.1",
    "flake8>=6.1.0",
    "jupyter>=1.0.0",
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
]
docs = [
    "sphinx>=7.2.5",
    "sphinx-rtd-theme>=1.3.0",
]

[project.scripts]
syndx-generate = "syndx.cli:generate"
syndx-validate = "syndx.cli:validate"

[tool.setuptools.packages.find]
where = ["src"]
include = ["syndx*"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
